# SecureFile

./: Dockerfile  README.md  Schema.sql  docker-compose.yml
securefile/: .env  Cargo.toml  Dockerfile  ded.enc  ded1.enc  docker-compose.yml  keys  keys.pub  newton.txt.enc  newton.txt.enc.dec  pdf.enc  renke.enc  renke.enc.dec  sample.enc  sample.enc.new  test.enc  test.txt.enc  unit_test.enc
securefile/.sqlx/: query-48529b45e82201ba91d1e1b00ed235b034b4b3d05c2a28eb39bad1f3cc1ce9a1.json  sqlx-data.json
securefile/DockerMysql/: Data.sql  Dockerfile
securefile/Migrations/: 0001_create_users_table.sql  0002_create_files_table.sql  0003_create_access_control_table.sql  0003_create_access_logs_table.sql  0005_create_master_keys_table.sql  0006_create_failed_attempts_table.sql  0007_create_integrity_checks_table.sql
securefile/fuzz/: Cargo.toml
securefile/fuzz/fuzz_targets/: decrypt_fuzz.rs  encrypt_fuzz.rs
securefile/src/: access_control.rs  cli.rs  encryption.rs  file.rs  lib.rs  main.rs  menu.rs  test.rs  user.rs
securefile/src/Encrypt/: README.docx
securefile/tests/: login_test.rs  main_test.rs  test_files.rs
