[package]
name = "secure_file_management"
version = "0.1.0"
authors = ["Rohith Lingala <rl92464@uga.edu>"]
edition = "2021"

[dependencies]
aes = "0.7"  # For AES encryption
base64 = "0.13"  # Encoding for encryption keys
diesel = { version = "2.0", features = ["mysql"] }  # ORM for MySQL/PostgreSQL
dotenv = "0.15"  # For environment configuration
clap = "3.0"  # Command-line argument parsing
bcrypt = "0.11"  # For password hashing
mysqlclient-sys = "0.4.1"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
rpassword = "7.0"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
dialoguer = "0.10"
hex = "0.4"
anyhow = "1.0"
libfuzzer-sys = "0.4"
mockall = "0.11"
tempfile = "3.6"

[[bin]]
name = "securefile"
path = "src/main.rs"

