[package]
name = "secure_file_management-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10" # Ensure this matches your project's encryption crate
base64 = "0.21"
hex = "0.4"
tempfile = "3.5"

[dependencies.secure_file_management]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encrypt_fuzz" # Register the new fuzz target
path = "fuzz_targets/encrypt_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decrypt_fuzz" # Register the new fuzz target
path = "fuzz_targets/decrypt_fuzz.rs"
test = false
doc = false
bench = false


[dev-dependencies]
cargo-fuzz = "0.11"
